[package]
name = "bochscpu-ffi"
version = "0.1.0"
authors = ["yrp <yrp604@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
bochscpu = { path = "../bochscpu" }

[build-dependencies]
cbindgen = "0.13"
