[package]
name = "bochscpu-ffi"
version = "0.1.0"
authors = ["yrp <yrp604@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
bochscpu = { path = "../bochscpu", features = ["serde"] }
log = { version = "0.4", features = ["release_max_level_off"] }
serde = "1.0"
serde_yaml = "0.8"
static_assertions = "1"
stderrlog = "0.4"

[build-dependencies]
cbindgen = "0.13"
